--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Libre+Baskerville:ital@1&family=Roboto&display=swap');
 body {
     background-color: #fcdcdf;
     color: #0f141e;
 
     font-size: 16px;
     font-weight: normal;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Libre Baskerville', serif;
+
     /*font:normal 16px 'Roboto', sans-serif ;*/
     /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif */
 
@@ -85,6 +86,22 @@ a:visited {
     background: #fff9dc;
 }
 
+.bg-yellow h2 {
+    text-align: center;
+}
+
+.bg-yellow li {
+    padding-top: 30px;
+}
+.offerandprice {
+    text-align: center;
+    font-size: bold;
+}
+
+.dopskill li {
+    padding-inline-start: 40px;
+    text-align: center;
+}
 .bg-green {
     background: #e5ffe7;
 }
